Revision history for Padre::Plugin::Plack

{{$NEXT}}

0.100970  2010-04-07 15:34:50 EST5EDT
* Switched to Dist::Zilla

0.04  2010-03-22
* Fixes crashes and weird behaviour with newer versions of Padre
  (Padre::Document::get_mimetype was renamed to Padre::Document::mimetype)
* Adds Dutch translation (ddn123456++)
* Adds Brazilian Portuguese translation (garu++)
* Updated list of Plack::HandlerS
* Updated dot-psgi examples from Plack distro

0.03  2009-12-24
* replace Padre::Debug by Padre::Logger
* removed github references
* updated french translation (jquelin)
* Fixed translation support
* Reviewed i18n messages

0.02  2009-12-23
* added french translation (jquelin)

0.01  2009-12-22
* First release