@@ -1,6 +1,7 @@
 Revision history for Padre::Plugin::Plack
 
 {{$NEXT}}
+* Now works more seamlessly with Padre::Wx::Output
 
 0.100970  2010-04-07 15:34:50 EST5EDT
 * Switched to Dist::Zilla
